http/compile_errors_v6.txt
warning: use of deprecated trait `static_gen::StaticNode`: Legacy trait kept for backward compatibility. Use StaticAxon instead.
  --> core\src\lib.rs:17:71
   |
17 | ...cManifest, StaticNode, StaticStat...
   |               ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `static_gen::read_json_file`: Internal API
  --> core\src\lib.rs:18:5
   |
18 |     read_json_file, write_json_file,
   |     ^^^^^^^^^^^^^^

warning: use of deprecated function `static_gen::write_json_file`: Internal API
  --> core\src\lib.rs:18:21
   |
18 |     read_json_file, write_json_file,
   |                     ^^^^^^^^^^^^^^^

warning: `ranvier-core` (lib) generated 3 warnings
    Checking ranvier-http v0.12.0 (F:\project\ranvier\ranvier-workspace\ranvier\http)
warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
    --> http\src\ingress.rs:2452:40
     |
2452 | impl<R> Service<Request<Incoming>> for RawIngressService<R>
     |                                        ^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(deprecated)]` on by default

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
    --> http\src\ingress.rs:1932:52
     |
1932 |     pub fn into_raw_service(self, resources: R) -> RawIngressService<R> {
     |                                                    ^^^^^^^^^^^^^^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
    --> http\src\ingress.rs:1940:9
     |
1940 |         RawIngressService {
     |         ^^^^^^^^^^^^^^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
  --> http\src\test_harness.rs:11:35
   |
11 | use crate::ingress::{HttpIngress, RawIngressService};
   |                                   ^^^^^^^^^^^^^^^^^

warning: use of deprecated struct `ingress::RawIngressService`: Internal service type
  --> http\src\test_harness.rs:43:14
   |
43 |     service: RawIngressService<R>,
   |              ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
    --> http\src\ingress.rs:2304:27
     |
2304 |     match service.oneshot(request).await {
     |                   ------- ^^^^^^^ expected `Request<Full<Bytes>>`, found `Request<BoxBody<Bytes, _>>`
     |                   |
     |                   arguments to this method are incorrect
     |
     = note: expected struct `http::Request<http_body_util::Full<bytes::Bytes>>`
                found struct `http::Request<BoxBody<bytes::Bytes, _>>`
help: the return type of this call is `http::Request<BoxBody<bytes::Bytes, _>>` due to the type of the argument passed
    --> http\src\ingress.rs:2304:11
     |
2304 |     match service.oneshot(request).await {
     |           ^^^^^^^^^^^^^^^^-------^
     |                           |
     |                           this argument influences the return type of `oneshot`
note: method defined here
    --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tower-0.5.3\src\util\mod.rs:89:8
     |
  89 |     fn oneshot(self, req: Request) -> Oneshot<Self, Request>
     |        ^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::routes`: Internal service type
    --> http\src\ingress.rs:1941:13
     |
1941 |             routes,
     |             ^^^^^^

warning: use of deprecated field `ingress::RawIngressService::fallback`: Internal service type
    --> http\src\ingress.rs:1942:13
     |
1942 |             fallback,
     |             ^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::layers`: Internal service type
    --> http\src\ingress.rs:1943:13
     |
1943 |             layers,
     |             ^^^^^^

warning: use of deprecated field `ingress::RawIngressService::health`: Internal service type
    --> http\src\ingress.rs:1944:13
     |
1944 |             health,
     |             ^^^^^^

warning: use of deprecated field `ingress::RawIngressService::static_assets`: Internal service type
    --> http\src\ingress.rs:1945:13
     |
1945 |             static_assets,
     |             ^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::resources`: Internal service type
    --> http\src\ingress.rs:1946:13
     |
1946 |             resources,
     |             ^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::routes`: Internal service type
    --> http\src\ingress.rs:2468:22
     |
2468 |         let routes = self.routes.clone();
     |                      ^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::fallback`: Internal service type
    --> http\src\ingress.rs:2469:24
     |
2469 |         let fallback = self.fallback.clone();
     |                        ^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::layers`: Internal service type
    --> http\src\ingress.rs:2470:22
     |
2470 |         let layers = self.layers.clone();
     |                      ^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::health`: Internal service type
    --> http\src\ingress.rs:2471:22
     |
2471 |         let health = self.health.clone();
     |                      ^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::static_assets`: Internal service type
    --> http\src\ingress.rs:2472:29
     |
2472 |         let static_assets = self.static_assets.clone();
     |                             ^^^^^^^^^^^^^^^^^^

warning: use of deprecated field `ingress::RawIngressService::resources`: Internal service type
    --> http\src\ingress.rs:2473:25
     |
2473 |         let resources = self.resources.clone();
     |                         ^^^^^^^^^^^^^^

error[E0782]: expected a type, found a trait
   --> http\src\sse.rs:136:22
    |
136 |     let boxed_body = Body::boxed(body);
    |                      ^^^^
    |
help: you can add the `dyn` keyword if you want a trait object
    |
136 |     let boxed_body = <dyn Body>::boxed(body);
    |                      ++++     +

warning: unused import: `futures_util::StreamExt`
   --> http\src\extract.rs:406:5
    |
406 | use futures_util::StreamExt;
    |     ^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `req`
   --> http\src\ingress.rs:805:55
    |
805 |         let handler: RouteHandler<R> = Arc::new(move |req: Request<Incoming>, res: &R| {
    |                                                       ^^^ help: if this is intentional, prefix it with an underscore: `_req`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `route_bus_injectors`
    --> http\src\ingress.rs:1549:17
     |
1549 |             let route_bus_injectors = route_bus_injectors.clone();
     |                 ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_route_bus_injectors`

Some errors have detailed explanations: E0308, E0782.
For more information about an error, try `rustc --explain E0308`.
warning: `ranvier-http` (lib) generated 20 warnings
error: could not compile `ranvier-http` (lib) due to 2 previous errors; 20 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `ranvier-http` (lib test) generated 20 warnings (20 duplicates)
error: could not compile `ranvier-http` (lib test) due to 2 previous errors; 20 warnings emitted
